<resources>
    <string name="app_name">ArcTrails</string>

    <string name="delete">Delete</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">ArcTrails</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_menu_wrench">Tools</string>
    <string name="latitude">Latitude\u0020\u0020: </string>
    <string name="longitude">Longitude : </string>

    <string name="title_activity_trail_data"></string>
    <string name="trail_data_start">Start</string>
    <string name="trail_data_delete">Delete</string>

    <string name="title_activity_new_trail">Create a New Trail</string>
    <string name="new_trail_name">Trail Name</string>
    <string name="new_trail_description">Description</string>
    <string name="new_trail_save">Save</string>
    <string name="datbaseLink">Temp Link</string>
    <string name="Title">Testing DB Environment</string>
    <string name="addToDB">Add to DB</string>
    <string name="addToDB2">Add to DB 2</string>
    <string name="addToDb">Add to DB1</string>
    <string name="testDBTitle">Test Activity for DB</string>
    <string name="title_activity_local_file">Load a file</string>
    <string name="title_activity_database_file">Download Trails</string>
    <string name="title_activity_recording">Trail Recorder</string>
    <string name="Record_off">Record</string>
    <string name="Record_on">Pause</string>
    <string name="trail_data_upload">Upload</string>
    <string name="waypoint_title">Add a Waypoint</string>
    <string name="waypoint_name">WName (optional)</string>
    <string name="Waypoint_comment">comment (optional)</string>

    <string-array name="waypoint_types">
        <item>Parking Lot</item>
        <item>View Point</item>
        <item>Picnic Area</item>
        <item>Toilets</item>
        <item>Dock</item>
        <item>Other</item>
    </string-array>

    <string name="editDifficulty">Difficulty</string>
    <string name="editLocation">Location</string>
    <string name="stringNotes">Notes</string>

    <string name="start">Capture a picture to crop</string>
    <string name="picture">Picture</string>
    <string name="picture_capture">Launch Camera</string>

    <string-array name="difficulty_array">
        <item>○  - Easiest</item>
        <item>●  - Easy</item>
        <item>■  - More Difficult</item>
        <item>◆  - Very Difficult</item>
        <item>◆◆ - Extremely Difficult</item>
    </string-array>

    <string-array name="distance_array">
        <item>0km - 5km Away</item>
        <item>5km - 10km Away</item>
        <item>10km - 20km Away</item>
        <item>20km - 50km Away</item>
        <item>More than 50km Away</item>
    </string-array>

    <string-array name="length_array">
        <item>Less than 1 hour</item>
        <item>Between 1 – 3 hours</item>
        <item>Between 3 – 5 hours</item>
        <item>Full day hike</item>
        <item>Overnight hike</item>
    </string-array>

    <string-array name="rating_array">
        <item>☆☆☆☆☆</item>
        <item>★☆☆☆☆</item>
        <item>★★☆☆☆</item>
        <item>★★★☆☆</item>
        <item>★★★★☆</item>
        <item>★★★★★</item>
    </string-array>

    <string name="title_activity_download_data"></string>
    <string name="trail_data_download">Download</string>
    <string name="title_activity_image_temp">ImageTemp</string>
    <string name="upload_image_test">Upload Image</string>
    <string name="add_image_test">Add Image</string>
    <string name="title_activity_information">App Info</string>
    <string name="information_text">
        "\n"
        "ArcTrails was originally developed as a project for the Agile Software Development "
        "program at the University of Northern British Columbia.\n\n"

        "Developers:\n\n"

        "Ayla Wickham - "
        "Caleigh LePage - "
        "Graeme Morgan - "
        "Reece Milliner - "
        "Ryley Jewsbury\n\n"



        "Acknowledgements:\n\n"

        "Picnic Table, Washroom, and Waves icons made by Freepik from www.flaticon.com\n"
        "All other icons from material.io/icons\n\n"

        "File storage handled by the GPXParser library from Alternative Vision:\n\n"
        "gpxparser.alternativevision.ro"
    </string>
    <string name="null_rating">☆☆☆☆☆ | 0 Votes</string>
    <string name="difficultyFilter">Difficulty</string>
    <string name="ratingFilter">Rating</string>
    <string name="distanceText">Distance</string>
    <string name="lengthText">Length</string>
    <string name="nameText">Name</string>
    <string name="filterButton">Filter</string>
    <string name="resetButton">Reset</string>
    <string name="RateTrail">Rate Trail</string>
    <string name="name_input">Name</string>
    <string name="name_filter">Name</string>
    <string name="loading_trails">Loading Trails</string>
    <string name="my_trails">My Trails</string>
    <string name="get_new_trails">Get New Trails</string>
    <string name="clear_map">Clear Map</string>
    <string name="go_to_trail">Go To Trail</string>
    <string name="creating_trails">Creating Trails</string>
    <string name="record_a_trail">Record a Trail</string>
    <string name="edit_a_trail">Edit a Trail</string>
    <string name="about">About</string>
    <string name="information">Information</string>
    <string name="record_button">Record</string>

    <string name="database_edit_checkbox_text">Allow this trail to be edited</string>
    <string name="database_edit_title">Trail Editing</string>
    <string name="database_edit_content">
        "Many trails can be improved through new paths, markers, and descriptions."
        "By allowing trail editing, other users are allowed to add more information"
        "and replace your trail in the database."
        "\nWarning: This cannot be changed later. If this trail is already in the database,"
        "this option is ignored."
    </string>
</resources>
